--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
 <head>
     <title>Resource.nu</title>
     <link rel="stylesheet" type="text/css" href="page1.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +22,10 @@
     </div>
     
     <div class="bottomThing">
-        <p>I'm a searchbar weeeeee</p>
+        <div>
+            <input type="text" id="searchbar">
+            <span class="fas fa-search" id="searchicon"></span>
+        </div>
         <a href="url">submit a resource</a>
     </div>
 
