--- a/page1.html
+++ b/page1.html
@@ -22,9 +22,9 @@
     </div>
     
     <div class="bottomThing">
-        <div>
+        <div class="input-group">
             <input type="text" id="searchbar">
-            <span class="fas fa-search" id="searchicon"></span>
+            <span class="iconfont-search" id="searchicon"></span>
         </div>
         <a href="url">submit a resource</a>
     </div>
