Add stylesheet ref

--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,7 @@
     <title>Resource.nu</title>
     <link rel="stylesheet" type="text/css" href="page1.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="icofont.min.css" />
 </head>
 
 <body>
