--- a/page1.html
+++ b/page1.html
@@ -25,7 +25,7 @@
     <div class="bottomThing">
         <div class="input-group">
             <input type="text" id="searchbar">
-            <span class="iconfont-search" id="searchicon"></span>
+            <span class="icofont-search" id="searchicon"></span>
         </div>
         <a href="url">submit a resource</a>
     </div>
