Added Menu Button and Changed Searchbar Format

--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,9 @@
 <body>
 
     <div class = "topThing">
-        <img src="potato.jpg" alt="">
+        <div class="nav">
+             <span class="icofont-navigation-menu" id="navigationmenu"></span>
+        </div>
     </div>
     
     <div class="middleThing">
